# Scandium-Dataset

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  LICENSE_BREAKDOWN.md  MODEL_LEADERBOARD.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SOURCE_SNAPSHOTS.md  TRUST_REPORT.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
api/: scandium_api.py
audit/: BATTERY_AUDIT.md  DATASET_BENCHMARK.md  DUPLICATE_AUDIT.md  QUALITY_AUDIT.md  RELEASE_AUDIT.md  REPAIR_AUDIT.md  REPOSITORY_AUDIT.md  REPRODUCIBILITY_AUDIT.md  SCIENTIFIC_AUDIT.md  SOURCE_AUDIT.md  STATISTICAL_AUDIT.md  STRUCTURE_AUDIT.md
benchmark/: evaluate.py  run_baselines.py  splits
configs/: pipeline_config.json
dataset/: bvse_checkpoint.json  dataset_infos.json  dataset_store.py
docs/: audit_ground_truth_v1.md  battery_methodology.md  benchmark.md  citation.md  data_card.md  dataset_design.md  dataset_statistics.md  faq.md  getting_started.md  limitations.md  overview.md  paper_outline.md  provenance.md  quality.md  related_work.md  repair.md  roadmap.md  ssb_strategic_roadmap.md  sse_readiness.md  validation.md
scripts/: audit_dashboard.py  audit_investigate_critical.py  audit_phase1_raw_data.py  audit_phase2_structure.py  audit_phase3_property.py  audit_phase4_duplicates.py  audit_phase5_repair.py  audit_phase6_quality.py  audit_phase7_scientific.py  audit_phase8_metadata.py  compute_bvse_barriers.py  compute_bvse_parallel.py  compute_cavd_channel_dimensionality.py  (+17 more)
(+39 files in other folders)
